test: added test for data:calendar
Write new tests for :data:calendar for locking in the behaviour of the module to prevent regression issues.